# cartographer

./: SOI_Cartographer.docx
eval/: eval.py  training_world_1.pgm  training_world_1.yaml  training_world_2.pgm  training_world_2.yaml  training_world_3.pgm  training_world_3.yaml
src/challenge_bridge/: CMakeLists.txt  package.xml
src/challenge_bridge/launch/: competition.launch.py
src/challenge_bridge/models/: robot.sdf
src/challenge_bridge/worlds/: training_world_1.sdf  training_world_2.sdf  training_world_3.sdf
src/docs/: interface_spec.md
src/team_solution/: CMakeLists.txt  package.xml
