<package format="3">
  <name>challenge_bridge</name>
  <version>0.1.0</version>
  <description>Organiser simulation infrastructure for SOI: Cartographer</description>
  <maintainer email="robotics@iitdh.ac.in">Robotics Club</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
